[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stats"
version = "0.1.0"
description = "Pingouin-based statistics helpers for common tests"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pingouin>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/fangzefunny/stats"

[tool.setuptools]
packages = ["stats"]
